docs : added author name

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/Fikcup/node-js-firstproject.git"
   },
-  "author": "",
+  "author": "Rhys Wright",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Fikcup/node-js-firstproject/issues"
